[package]
name = "server"
version = "0.1.0"
authors = ["Nick Baker"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "sync"] }
warp = "0.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
futures = { version = "0.3", default-features = false }
nanoid = "0.4.0"